fix: homepage mobile navbar z-index is too low, elements showing through

--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -4,7 +4,7 @@
 .nav {
   position: absolute;
   top: $nav-margin-height;
-  z-index: 5;
+  z-index: 10;
   margin: 0 auto;
   top: 0;
   padding-top: 2.25rem;
